src/test/ui/issues/issue-16683.nll.stderr
error[E0521]: borrowed data escapes outside of associated function
  --> $DIR/issue-16683.rs:4:9
   |
LL | trait T<'a> {
   |         -- lifetime `'a` defined here
LL |     fn a(&'a self) -> &'a bool;
LL |     fn b(&self) {
   |          -----
   |          |
   |          `self` is a reference that is only valid in the associated function body
   |          let's call the lifetime of this reference `'1`
LL |         self.a();
   |         ^^^^^^^^
   |         |
   |         `self` escapes the associated function body here
   |         argument requires that `'1` must outlive `'a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0521`.
